# tg-bot

./: .gitignore  README.md
bot/: CMakeLists.txt  README.md
bot/src/: bot.cpp
bot/src/handlers/: general.cpp  general.h  moderation.cpp  moderation.h  owner.cpp  owner.h
bot/src/utils/: message_util.cpp  message_util.h
